// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildScore snapshots > builds time-model for backup-forward-two-voices.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 366,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 1920,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v2-o0-k64",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 513,
              "start": 415,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "2",
            "writtenKey": 64,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for chord-basic.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 960,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 350,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": true,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k64",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 445,
              "start": 355,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 64,
          },
          {
            "accent": false,
            "chord": true,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k67",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 67,
            "source": {
              "end": 540,
              "start": 450,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 67,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for cue-notes-not-played.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 2880,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o1-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 960,
            "onsetQuarters": {
              "den": 1,
              "num": 1,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 443,
              "start": 361,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for divisions-change-mid-part.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
          "2",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 960,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-1",
        "implicit": false,
        "index": 1,
        "label": "2",
        "lengthTicks": 960,
        "nominalTicks": 0,
        "startTick": 960,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 370,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m1-v1-o0-k60",
            "instrument": null,
            "measureIndex": 1,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 567,
              "start": 465,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for duplicate-notes-disambiguator.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 350,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60-d2",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 481,
              "start": 399,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for fingering-substitution-alternate.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [
              {
                "alternate": false,
                "finger": 2,
                "placement": null,
                "substitution": true,
                "text": "2",
              },
              {
                "alternate": true,
                "finger": 3,
                "placement": null,
                "substitution": false,
                "text": "3",
              },
            ],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 479,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for fractional-duration.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 7680,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 1920,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 354,
              "start": 270,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 5760,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o1_2-k62",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 1920,
            "onsetQuarters": {
              "den": 2,
              "num": 1,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 62,
            "source": {
              "end": 443,
              "start": 359,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 62,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 3840,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for grace-acciaccatura.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 0,
            "fingerings": [],
            "grace": {
              "index": 1,
              "makeTime": null,
              "slash": true,
              "stealFollowing": null,
              "stealPrevious": null,
            },
            "id": "n-p0-s1-m0-v1-o0-k59-g1",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 59,
            "source": {
              "end": 348,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 59,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 435,
              "start": 353,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for grace-after-note-end-of-measure.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
          "2",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-1",
        "implicit": false,
        "index": 1,
        "label": "2",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 3840,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 350,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 0,
            "fingerings": [],
            "grace": {
              "index": 1,
              "makeTime": null,
              "slash": false,
              "stealFollowing": null,
              "stealPrevious": null,
            },
            "id": "n-p0-s1-m0-v1-o4-k62-g1",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 3840,
            "onsetQuarters": {
              "den": 1,
              "num": 4,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 62,
            "source": {
              "end": 423,
              "start": 355,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 62,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m1-v1-o0-k64",
            "instrument": null,
            "measureIndex": 1,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 546,
              "start": 464,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 64,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for grace-group-at-start.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 0,
            "fingerings": [],
            "grace": {
              "index": 1,
              "makeTime": null,
              "slash": false,
              "stealFollowing": null,
              "stealPrevious": null,
            },
            "id": "n-p0-s1-m0-v1-o0-k57-g1",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 57,
            "source": {
              "end": 336,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 57,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 0,
            "fingerings": [],
            "grace": {
              "index": 2,
              "makeTime": null,
              "slash": false,
              "stealFollowing": null,
              "stealPrevious": null,
            },
            "id": "n-p0-s1-m0-v1-o0-k59-g2",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 59,
            "source": {
              "end": 409,
              "start": 341,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 59,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 496,
              "start": 414,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for grand-staff-two-voices-per-staff.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k72",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 72,
            "source": {
              "end": 400,
              "start": 286,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 72,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v2-o0-k64",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 563,
              "start": 449,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "2",
            "writtenKey": 64,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s2-m0-v3-o0-k48",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 48,
            "source": {
              "end": 726,
              "start": 612,
            },
            "staff": 2,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "3",
            "writtenKey": 48,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s2-m0-v4-o0-k43",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 43,
            "source": {
              "end": 889,
              "start": 775,
            },
            "staff": 2,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "4",
            "writtenKey": 43,
          },
        ],
        "staves": 2,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for measure-numbers-duplicate-nonnumeric.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1a",
          "X",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1a",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-1",
        "implicit": false,
        "index": 1,
        "label": "1a",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 3840,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-2",
        "implicit": false,
        "index": 2,
        "label": "X",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 7680,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 351,
              "start": 269,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m1-v1-o0-k62",
            "instrument": null,
            "measureIndex": 1,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 62,
            "source": {
              "end": 475,
              "start": 393,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 62,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m2-v1-o0-k64",
            "instrument": null,
            "measureIndex": 2,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 598,
              "start": 516,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 64,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for measure-overfull.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 4800,
        "nominalTicks": 3840,
        "startTick": 0,
        "time": {
          "beatType": 4,
          "beats": "4",
        },
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 4800,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 403,
              "start": 321,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for measure-repeat.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
          "2",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-1",
        "implicit": false,
        "index": 1,
        "label": "2",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 3840,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 350,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m1-v1-o0-k60",
            "instrument": null,
            "measureIndex": 1,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 581,
              "start": 499,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for measure-underfull.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 2880,
        "nominalTicks": 3840,
        "startTick": 0,
        "time": {
          "beatType": 4,
          "beats": "4",
        },
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 2880,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 403,
              "start": 321,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for minimal-single-note.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 3840,
        "startTick": 0,
        "time": {
          "beatType": 4,
          "beats": "4",
        },
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 462,
              "start": 362,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for multi-measure-rest.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
          "2",
          "3",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-1",
        "implicit": false,
        "index": 1,
        "label": "2",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 3840,
        "time": null,
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-2",
        "implicit": false,
        "index": 2,
        "label": "3",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 7680,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for non-ascii-Łódź-日本.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 412,
              "start": 295,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": "Łódź 日本",
  },
}
`;

exports[`buildScore snapshots > builds time-model for pickup-implicit.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 2880,
        "id": "ms-0",
        "implicit": true,
        "index": 0,
        "label": "0",
        "lengthTicks": 960,
        "nominalTicks": 3840,
        "startTick": 0,
        "time": {
          "beatType": 4,
          "beats": "4",
        },
      },
      {
        "beatOffsetTicks": 0,
        "id": "ms-1",
        "implicit": false,
        "index": 1,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 3840,
        "startTick": 960,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 418,
              "start": 336,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m1-v1-o0-k60",
            "instrument": null,
            "measureIndex": 1,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 541,
              "start": 459,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for scale-c-major-q100.musicxml 1`] = `
{
  "report": {
    "entries": [],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": false,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 3840,
        "startTick": 0,
        "time": {
          "beatType": 4,
          "beats": "4",
        },
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 585,
              "start": 483,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o1-k62",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 960,
            "onsetQuarters": {
              "den": 1,
              "num": 1,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 62,
            "source": {
              "end": 692,
              "start": 590,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 62,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o2-k64",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 1920,
            "onsetQuarters": {
              "den": 1,
              "num": 2,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 799,
              "start": 697,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 64,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 960,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o3-k65",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 2880,
            "onsetQuarters": {
              "den": 1,
              "num": 3,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 65,
            "source": {
              "end": 906,
              "start": 804,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 65,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for tuplet-triplet-eighths.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 1440,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 480,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 494,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 480,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o1_2-k62",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 480,
            "onsetQuarters": {
              "den": 2,
              "num": 1,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 62,
            "source": {
              "end": 680,
              "start": 499,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 62,
          },
          {
            "accent": false,
            "chord": false,
            "durationTicks": 480,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o1-k64",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 960,
            "onsetQuarters": {
              "den": 1,
              "num": 1,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 64,
            "source": {
              "end": 910,
              "start": 685,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 64,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for unsupported-elements-notice.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 524,
              "start": 442,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for verovio-id-roundtrip.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "measureLengthMismatch",
        "measureLabels": [
          "1",
        ],
        "severity": "info",
      },
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 0,
        "startTick": 0,
        "time": null,
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [
          {
            "accent": false,
            "chord": false,
            "durationTicks": 3840,
            "fingerings": [],
            "grace": null,
            "id": "n-p0-s1-m0-v1-o0-k60",
            "instrument": null,
            "measureIndex": 0,
            "onsetInMeasure": 0,
            "onsetQuarters": {
              "den": 1,
              "num": 0,
            },
            "part": 0,
            "printed": true,
            "soundingKey": 60,
            "source": {
              "end": 373,
              "start": 268,
            },
            "staff": 1,
            "tie": {
              "start": false,
              "stop": false,
            },
            "unpitched": false,
            "velocityOverride": null,
            "voice": "1",
            "writtenKey": 60,
          },
        ],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;

exports[`buildScore snapshots > builds time-model for whole-measure-rest.musicxml 1`] = `
{
  "report": {
    "entries": [
      {
        "code": "defaultTempo",
        "measureLabels": [
          "0",
        ],
        "severity": "info",
      },
    ],
    "skippedElementCount": 0,
  },
  "score": {
    "composer": null,
    "defaultTempoUsed": true,
    "measures": [
      {
        "beatOffsetTicks": 0,
        "id": "ms-0",
        "implicit": false,
        "index": 0,
        "label": "1",
        "lengthTicks": 3840,
        "nominalTicks": 3840,
        "startTick": 0,
        "time": {
          "beatType": 4,
          "beats": "4",
        },
      },
    ],
    "navigation": {
      "endings": [],
      "jumps": [],
      "repeats": [],
      "targets": [],
    },
    "parts": [
      {
        "dynamics": [],
        "index": 0,
        "instruments": [
          {
            "bank": null,
            "channelHint": null,
            "fallback": true,
            "name": "",
            "pan": null,
            "percussion": false,
            "program": 0,
            "unpitchedKey": null,
            "volume": null,
            "xmlId": "",
          },
        ],
        "name": "Piano",
        "notes": [],
        "staves": 1,
        "transpositions": [],
        "wedges": [],
        "xmlId": "P1",
      },
    ],
    "ppq": 960,
    "tempoMarks": [
      {
        "measureIndex": 0,
        "onsetInMeasure": 0,
        "qpmDen": 100,
        "qpmNum": 10000,
      },
    ],
    "title": null,
  },
}
`;
